--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "nodemailer": "^6.4.11",
     "pg": "^8.3.0",
     "sequelize": "^6.3.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
